=== master

* Deprecate Sequel::BasicObject#remove_methods! (jeremyevans)

* Deprecate sequel/no_core_ext file (jeremyevans)

* Deprecate model dataset #insert_sql accepting model instances (jeremyevans)

* Deprecate model dataset #join_table and #graph accepting model classes (jeremyevans)

* Support :alias option to class_table_inheritance plugin, wrapping subclass datasets in a subquery to fix ambiguous column issues (jeremyevans)

* Deprecate Model.set_allowed_columns and Model#{set_all,set_only,update_all,update_only}, move to whitelist security plugin (jeremyevans)

* Do not raise MassAssignmentRestriction when setting nested attributes and using the :fields option, only check for fields given (jeremyevans)

* Do not add class methods for private methods definined in dataset_module (jeremyevans)

* Deprecate Model.def_dataset_method and Model.subset, move to def_dataset_method plugin (jeremyevans)

* Deprecate Model.finder and Model.prepared_finder, move to finder plugin (jeremyevans)

* Deprecate calling Model.db= on a model with a dataset (jeremyevans)

* Deprecate splitting symbols to look for qualified/aliased identifiers (e.g. :table__column) (jeremyevans)

* Allow optimized lookups and deletes for models using SQL::Identifier and SQL::QualifiedIdentifier values as the FROM table (jeremyevans)

=== 4.45.0 (2017-04-01)

* Correctly handle datasets with offsets but no limits used in compound datasets on MSSQL <2012 (jeremyevans)

* Correctly handle false values in the split_values plugin (bananarne) (#1333)

* Deprecate Dataset#dup/clone and Model.dup/clone (jeremyevans)

* Deprecate the schema and scissors plugins (jeremyevans)

* Deprecate Model.{lazy_attributes,nested_attributes,composition,serialization}_module accessors (jeremyevans)

* Deprecate Database#database_name on MySQL (jeremyevans)

* Deprecate Database#use on MySQL (jeremyevans)

* Make pg_hstore extension no longer update PG_NAMED_TYPES (jeremyevans)
